added rdoc to comment controller

--- a/rdoc/table_of_contents.html
+++ b/rdoc/table_of_contents.html
@@ -49,6 +49,12 @@
     <a href="CommentsHelper.html">CommentsHelper</a>
   </li>
     <li class="class">
+    <a href="Like.html">Like</a>
+  </li>
+    <li class="class">
+    <a href="LikesController.html">LikesController</a>
+  </li>
+    <li class="class">
     <a href="Micropost.html">Micropost</a>
   </li>
     <li class="class">
@@ -56,6 +62,12 @@
   </li>
     <li class="module">
     <a href="MicropostsHelper.html">MicropostsHelper</a>
+  </li>
+    <li class="class">
+    <a href="Profile.html">Profile</a>
+  </li>
+    <li class="class">
+    <a href="ProfilesController.html">ProfilesController</a>
   </li>
     <li class="class">
     <a href="Relationship.html">Relationship</a>
@@ -105,15 +117,21 @@
 <h2 id="methods">Methods</h2>
 <ul>
   
-    <li class="method"><a href="UsersController.html#method-i-create">#create &mdash; UsersController</a>
+    <li class="method"><a href="User.html#method-c-search">::search &mdash; User</a>
+  
+    <li class="method"><a href="User.html#method-i-accept_friend">#accept_friend &mdash; User</a>
+  
+    <li class="method"><a href="Profile.html#method-i-birthdate">#birthdate &mdash; Profile</a>
+  
+    <li class="method"><a href="CommentsController.html#method-i-create">#create &mdash; CommentsController</a>
+  
+    <li class="method"><a href="LikesController.html#method-i-create">#create &mdash; LikesController</a>
   
     <li class="method"><a href="MicropostsController.html#method-i-create">#create &mdash; MicropostsController</a>
   
     <li class="method"><a href="SessionsController.html#method-i-create">#create &mdash; SessionsController</a>
   
-    <li class="method"><a href="CommentsController.html#method-i-create">#create &mdash; CommentsController</a>
-  
-    <li class="method"><a href="WallsController.html#method-i-create">#create &mdash; WallsController</a>
+    <li class="method"><a href="UsersController.html#method-i-create">#create &mdash; UsersController</a>
   
     <li class="method"><a href="SessionsHelper.html#method-i-current_user">#current_user &mdash; SessionsHelper</a>
   
@@ -121,49 +139,55 @@
   
     <li class="method"><a href="SessionsHelper.html#method-i-current_user-3F">#current_user? &mdash; SessionsHelper</a>
   
-    <li class="method"><a href="WallsController.html#method-i-destroy">#destroy &mdash; WallsController</a>
-  
-    <li class="method"><a href="MicropostsController.html#method-i-destroy">#destroy &mdash; MicropostsController</a>
+    <li class="method"><a href="Profile.html#method-i-default_values">#default_values &mdash; Profile</a>
   
     <li class="method"><a href="SessionsController.html#method-i-destroy">#destroy &mdash; SessionsController</a>
   
+    <li class="method"><a href="LikesController.html#method-i-destroy">#destroy &mdash; LikesController</a>
+  
+    <li class="method"><a href="RelationshipsController.html#method-i-destroy">#destroy &mdash; RelationshipsController</a>
+  
     <li class="method"><a href="CommentsController.html#method-i-destroy">#destroy &mdash; CommentsController</a>
   
-    <li class="method"><a href="MicropostsController.html#method-i-edit">#edit &mdash; MicropostsController</a>
+    <li class="method"><a href="MicropostsController.html#method-i-destroy">#destroy &mdash; MicropostsController</a>
   
-    <li class="method"><a href="WallsController.html#method-i-edit">#edit &mdash; WallsController</a>
+    <li class="method"><a href="WallsController.html#method-i-destroy">#destroy &mdash; WallsController</a>
   
     <li class="method"><a href="UsersController.html#method-i-edit">#edit &mdash; UsersController</a>
   
-    <li class="method"><a href="CommentsController.html#method-i-edit">#edit &mdash; CommentsController</a>
+    <li class="method"><a href="WallsController.html#method-i-empty">#empty &mdash; WallsController</a>
+  
+    <li class="method"><a href="Profile.html#method-i-filled_out">#filled_out &mdash; Profile</a>
+  
+    <li class="method"><a href="UsersController.html#method-i-friend_accept">#friend_accept &mdash; UsersController</a>
+  
+    <li class="method"><a href="UsersController.html#method-i-friend_deny">#friend_deny &mdash; UsersController</a>
+  
+    <li class="method"><a href="UsersController.html#method-i-friend_request">#friend_request &mdash; UsersController</a>
   
     <li class="method"><a href="ApplicationHelper.html#method-i-full_title">#full_title &mdash; ApplicationHelper</a>
   
+    <li class="method"><a href="User.html#method-i-has_like-3F">#has_like? &mdash; User</a>
+  
     <li class="method"><a href="StaticPagesController.html#method-i-home">#home &mdash; StaticPagesController</a>
   
-    <li class="method"><a href="CommentsController.html#method-i-index">#index &mdash; CommentsController</a>
+    <li class="method"><a href="User.html#method-i-mutual_friends">#mutual_friends &mdash; User</a>
   
-    <li class="method"><a href="WallsController.html#method-i-index">#index &mdash; WallsController</a>
-  
-    <li class="method"><a href="CommentsController.html#method-i-new">#new &mdash; CommentsController</a>
+    <li class="method"><a href="User.html#method-i-name">#name &mdash; User</a>
   
     <li class="method"><a href="UsersController.html#method-i-new">#new &mdash; UsersController</a>
   
-    <li class="method"><a href="MicropostsController.html#method-i-new">#new &mdash; MicropostsController</a>
-  
-    <li class="method"><a href="WallsController.html#method-i-new">#new &mdash; WallsController</a>
-  
-    <li class="method"><a href="SessionsController.html#method-i-new">#new &mdash; SessionsController</a>
+    <li class="method"><a href="User.html#method-i-newsfeed">#newsfeed &mdash; User</a>
   
     <li class="method"><a href="SessionsHelper.html#method-i-redirect_back_or">#redirect_back_or &mdash; SessionsHelper</a>
   
-    <li class="method"><a href="WallsController.html#method-i-show">#show &mdash; WallsController</a>
+    <li class="method"><a href="User.html#method-i-request_friend">#request_friend &mdash; User</a>
   
-    <li class="method"><a href="CommentsController.html#method-i-show">#show &mdash; CommentsController</a>
-  
-    <li class="method"><a href="UsersController.html#method-i-show">#show &mdash; UsersController</a>
+    <li class="method"><a href="UsersController.html#method-i-search">#search &mdash; UsersController</a>
   
     <li class="method"><a href="MicropostsController.html#method-i-show">#show &mdash; MicropostsController</a>
+  
+    <li class="method"><a href="UsersController.html#method-i-show">#show &mdash; UsersController</a>
   
     <li class="method"><a href="SessionsHelper.html#method-i-sign_in">#sign_in &mdash; SessionsHelper</a>
   
@@ -175,11 +199,15 @@
   
     <li class="method"><a href="SessionsHelper.html#method-i-store_location">#store_location &mdash; SessionsHelper</a>
   
+    <li class="method"><a href="User.html#method-i-unfriend">#unfriend &mdash; User</a>
+  
+    <li class="method"><a href="UsersController.html#method-i-unfriend">#unfriend &mdash; UsersController</a>
+  
     <li class="method"><a href="MicropostsController.html#method-i-update">#update &mdash; MicropostsController</a>
   
-    <li class="method"><a href="CommentsController.html#method-i-update">#update &mdash; CommentsController</a>
+    <li class="method"><a href="ProfilesController.html#method-i-update">#update &mdash; ProfilesController</a>
   
-    <li class="method"><a href="WallsController.html#method-i-update">#update &mdash; WallsController</a>
+    <li class="method"><a href="UsersController.html#method-i-update">#update &mdash; UsersController</a>
   
 </ul>
 
