--- a/rdoc/index.html
+++ b/rdoc/index.html
@@ -69,11 +69,19 @@
   
     <li><a href="./CommentsHelper.html">CommentsHelper</a>
   
+    <li><a href="./Like.html">Like</a>
+  
+    <li><a href="./LikesController.html">LikesController</a>
+  
     <li><a href="./Micropost.html">Micropost</a>
   
     <li><a href="./MicropostsController.html">MicropostsController</a>
   
     <li><a href="./MicropostsHelper.html">MicropostsHelper</a>
+  
+    <li><a href="./Profile.html">Profile</a>
+  
+    <li><a href="./ProfilesController.html">ProfilesController</a>
   
     <li><a href="./Relationship.html">Relationship</a>
   
@@ -163,7 +171,7 @@ attributes:
 
 <p>comment -</p>
 
-<pre>belong to microposts and user
+<pre>belong to micropost and user
 attribute:
   text</pre>
 
